--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_004_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_005_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_006_sin_comision_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Bus.cs" />
