--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -977,6 +977,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_004_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_005_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_006_Data.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_006_sin_comision_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Data.cs" />
