--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -282,6 +282,7 @@
     <Compile Include="Reportes\Inventario\INV_009_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_010_Bus.cs" />
     <Compile Include="Reportes\Inventario\INV_012_Bus.cs" />
+    <Compile Include="Reportes\Inventario\INV_013_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_001_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_001_Bus.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_002_Bus.cs" />
