--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1017,6 +1017,7 @@
     <Compile Include="Reportes\Inventario\INV_009_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_010_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_012_Data.cs" />
+    <Compile Include="Reportes\Inventario\INV_013_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_001_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_002_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_003_Data.cs" />
