--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -312,6 +312,7 @@
     <Compile Include="Reportes\Inventario\INV_009_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_010_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_012_Info.cs" />
+    <Compile Include="Reportes\Inventario\INV_013_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_001_Info.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_001_Info.cs" />
     <Compile Include="Reportes\ActivoFijo\ACTF_002_Info.cs" />
