--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_007_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_008_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_009_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_010_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_001_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_002_Bus.cs" />
     <Compile Include="Reportes\Facturacion\FAC_003_Bus.cs" />
