--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -336,6 +336,7 @@
     <Compile Include="Areas\Importacion\Controllers\LiquidacionOrdenCompraController.cs" />
     <Compile Include="Areas\Importacion\Controllers\OrdenCompraExteriorController.cs" />
     <Compile Include="Areas\Importacion\Controllers\ParametrosImportacionController.cs" />
+    <Compile Include="Areas\Importacion\Controllers\PartidaArancelariaController.cs" />
     <Compile Include="Areas\Importacion\Controllers\RecepcionOrdenCompraController.cs" />
     <Compile Include="Areas\Importacion\ImportacionAreaRegistration.cs" />
     <Compile Include="Areas\Inventario\Controllers\CatalogoInventarioController.cs" />
@@ -9174,6 +9175,11 @@
     <Content Include="Areas\Reportes\Views\InventarioReportes\INV_013.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_011.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_010.cshtml" />
+    <Content Include="Areas\Importacion\Views\PartidaArancelaria\Index.cshtml" />
+    <Content Include="Areas\Importacion\Views\PartidaArancelaria\_GridViewPartial_partida_arancelaria.cshtml" />
+    <Content Include="Areas\Importacion\Views\PartidaArancelaria\Nuevo.cshtml" />
+    <Content Include="Areas\Importacion\Views\PartidaArancelaria\Modificar.cshtml" />
+    <Content Include="Areas\Importacion\Views\PartidaArancelaria\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
