--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -9192,6 +9192,13 @@
     <Content Include="Areas\CuentasPorPagar\Views\ParametrosCXP\_CmbCuenta_Param5.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\ParametrosCXP\_CmbCuenta_Param4.cshtml" />
     <Content Include="Areas\CuentasPorPagar\Views\ParametrosCXP\_CmbCuenta_Param3.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ParametrosFacturacion\_CmbCuenta_Param1.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ParametrosFacturacion\_CmbCuenta_Param2.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ParametrosFacturacion\_CmbCuenta_Param3.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ParametrosFacturacion\_CmbCuenta_Param4.cshtml" />
+    <Content Include="Areas\Inventario\Views\ParametroInventario\_CmbCuenta_Param1.cshtml" />
+    <Content Include="Areas\Inventario\Views\ParametroInventario\_CmbCuenta_Param2.cshtml" />
+    <Content Include="Areas\Inventario\Views\ParametroInventario\_CmbCuenta_Param3.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
