--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -995,6 +995,12 @@
     <Compile Include="Reportes\RRHH\ROL_015_Rpt.Designer.cs">
       <DependentUpon>ROL_015_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\RRHH\ROL_016_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\RRHH\ROL_016_Rpt.Designer.cs">
+      <DependentUpon>ROL_016_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -9207,6 +9213,7 @@
     <Content Include="Areas\Inventario\Views\ParametroInventario\_CmbCuenta_Param3.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbEmpleado_RRHH.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_015.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_016.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9605,6 +9612,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\RRHH\ROL_015_Rpt.resx">
       <DependentUpon>ROL_015_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\RRHH\ROL_016_Rpt.resx">
+      <DependentUpon>ROL_016_Rpt.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
