--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -1001,6 +1001,12 @@
     <Compile Include="Reportes\RRHH\ROL_016_Rpt.Designer.cs">
       <DependentUpon>ROL_016_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\RRHH\ROL_017_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\RRHH\ROL_017_Rpt.Designer.cs">
+      <DependentUpon>ROL_017_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -9180,7 +9186,6 @@
     <Content Include="Areas\CuentasPorCobrar\Views\LiquidacionComisiones\_GridViewPartial_liquidacion_det.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\_CmbCuenta_contable_Conta.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorCobrarReportes\CXC_006.cshtml" />
-    <Content Include="Areas\RRHH\Views\MarcacionEmpleado\_CmbEmpleado_marcacion.cshtml" />
     <Content Include="Areas\RRHH\Views\ActaFiniquito\_CmbEmpleado_acta.cshtml" />
     <Content Include="Areas\RRHH\Views\Contrato\_CmbEmpleado_contrato.cshtml" />
     <Content Include="Areas\RRHH\Views\LiquidacionVacaciones\_CmbEmpleado_vaca.cshtml" />
@@ -9214,6 +9219,8 @@
     <Content Include="Areas\Reportes\Views\RRHHReportes\_CmbEmpleado_RRHH.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_015.cshtml" />
     <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_016.cshtml" />
+    <Content Include="Areas\Reportes\Views\RRHHReportes\ROL_017.cshtml" />
+    <Content Include="Areas\RRHH\Views\MarcacionEmpleado\_CmbEmpleado_Marcacion.cshtml" />
     <None Include="Properties\PublishProfiles\Erp_web.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Properties\PublishProfiles\web.pubxml" />
@@ -9615,6 +9622,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\RRHH\ROL_016_Rpt.resx">
       <DependentUpon>ROL_016_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\RRHH\ROL_017_Rpt.resx">
+      <DependentUpon>ROL_017_Rpt.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
