--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1171,6 +1171,9 @@
     <Compile Include="ro_periodo_x_ro_Nomina_TipoLiqui.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
+    <Compile Include="ro_permiso_x_empleado.cs">
+      <DependentUpon>Model_rrhh.tt</DependentUpon>
+    </Compile>
     <Compile Include="ro_prestamo.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -1254,6 +1257,7 @@
     <Compile Include="RRHH\ro_participacion_utilidad_empleado_Data.cs" />
     <Compile Include="RRHH\ro_periodo_Data.cs" />
     <Compile Include="RRHH\ro_periodo_x_ro_Nomina_TipoLiqui_Data.cs" />
+    <Compile Include="RRHH\ro_permiso_x_empleado_Data.cs" />
     <Compile Include="RRHH\ro_prestamo_Data.cs" />
     <Compile Include="RRHH\ro_prestamo_detalle_Data.cs" />
     <Compile Include="RRHH\ro_rol_Data.cs" />
