--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -357,6 +357,7 @@
     <Compile Include="RRHH\ro_participacion_utilidad_empleado_Bus.cs" />
     <Compile Include="RRHH\ro_periodo_Bus.cs" />
     <Compile Include="RRHH\ro_periodo_x_ro_Nomina_TipoLiqui_Bus.cs" />
+    <Compile Include="RRHH\ro_permiso_x_empleado_Bus.cs" />
     <Compile Include="RRHH\ro_prestamo_Bus.cs" />
     <Compile Include="RRHH\ro_prestamo_detalle_Bus.cs" />
     <Compile Include="RRHH\ro_rol_Bus.cs" />
