--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -569,6 +569,7 @@
     <Compile Include="General\tb_sis_Impuesto_Data.cs" />
     <Compile Include="General\tb_sis_Impuesto_Tipo_Data.cs" />
     <Compile Include="General\tb_sis_Impuesto_x_ctacble_Data.cs" />
+    <Compile Include="General\tb_sis_log_error_Data.cs" />
     <Compile Include="General\tb_sis_reporte_Data.cs" />
     <Compile Include="General\tb_sis_reporte_diseno_Data.cs" />
     <Compile Include="General\tb_sis_reporte_x_seg_usuario_Data.cs" />
@@ -1447,6 +1448,9 @@
       <DependentUpon>Model_general.tt</DependentUpon>
     </Compile>
     <Compile Include="tb_sis_Impuesto_x_ctacble.cs">
+      <DependentUpon>Model_general.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tb_sis_log_error.cs">
       <DependentUpon>Model_general.tt</DependentUpon>
     </Compile>
     <Compile Include="tb_sis_reporte.cs">
