--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1043,6 +1043,7 @@
     <Compile Include="Reportes\RRHH\ROL_015_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_016_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_017_Data.cs" />
+    <Compile Include="Reportes\RRHH\ROL_018_Data.cs" />
     <Compile Include="ro_Acta_Finiquito.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -1865,6 +1866,9 @@
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="VWROL_016.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VWROL_018.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
     <Compile Include="vwRo_ActaFiniquito.cs">
