--- a/ERP/Core.Erp.Web/Areas/Compras/Views/web.config
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/web.config
@@ -25,6 +25,9 @@
         <add namespace="DevExpress.XtraReports.Web" />
         <add namespace="DevExpress.XtraReports.Web.DocumentViewer" />
         <add namespace="DevExpress.Web.ASPxTreeList" />
+        <add namespace="DevExpress.Web.ASPxPivotGrid" />
+        <add namespace="DevExpress.Data.PivotGrid" />
+        <add namespace="DevExpress.XtraPivotGrid" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
