--- a/ERP/Core.Erp.Web/Web.config
+++ b/ERP/Core.Erp.Web/Web.config
@@ -40,7 +40,7 @@
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <system.web>
-    <sessionState mode="InProc" timeout="180" cookieless="false"></sessionState>
+    <sessionState mode="InProc" timeout="180" cookieless="false" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="180" />
     </authentication>
@@ -68,6 +68,7 @@
         <add assembly="DevExpress.Xpo.v17.2, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add assembly="DevExpress.XtraCharts.v17.2, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
         <add assembly="DevExpress.XtraGauges.v17.2.Core, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+        <add assembly="DevExpress.Web.ASPxPivotGrid.v17.2, Version=17.2.5.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.5.2" maxRequestLength="4096" requestValidationMode="4.0" executionTimeout="110" />
@@ -96,6 +97,9 @@
         <add namespace="DevExpress.XtraReports.UI" />
         <add namespace="DevExpress.XtraReports.Web" />
         <add namespace="DevExpress.XtraReports.Web.DocumentViewer" />
+        <add namespace="DevExpress.Web.ASPxPivotGrid" />
+        <add namespace="DevExpress.Data.PivotGrid" />
+        <add namespace="DevExpress.XtraPivotGrid" />
       </namespaces>
     </pages>
   </system.web>
