--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -314,6 +314,7 @@
     <Compile Include="Reportes\RRHH\ROL_015_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_016_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_017_Bus.cs" />
+    <Compile Include="Reportes\RRHH\ROL_019_Bus.cs" />
     <Compile Include="Reportes\RRHH\ROL_018_Bus.cs" />
     <Compile Include="RRHH\Rdep_Bus.cs" />
     <Compile Include="RRHH\ro_Acta_Finiquito_Bus.cs" />
