--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -344,6 +344,7 @@
     <Compile Include="Reportes\RRHH\ROL_015_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_016_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_017_Info.cs" />
+    <Compile Include="Reportes\RRHH\ROL_019_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_018_Info.cs" />
     <Compile Include="RRHH\RDEP\Rdep.cs" />
     <Compile Include="RRHH\RDEP\Rdep_Info.cs" />
